launch, and login

--- a/server/templates/error.html
+++ b/server/templates/error.html
@@ -11,6 +11,6 @@
     <h2 class="error">Authentication Failed</h2>
     <p>Unable to complete the authentication process.</p>
     <p>ERROR: {{error}}</p>
-    <p>You may close this window and try again.</p>
+    <p>You may close this window and try again (or try refresh with ctrl + r).</p>
 </body>
 </html>
